--- a/app/views/words/in_out.html.erb
+++ b/app/views/words/in_out.html.erb
@@ -17,6 +17,18 @@
   </p>
 
   <div class="actions">
-    <%= button_to "Delete all words", destroy_all_words_path, method: :delete, class: "button-red", data: { controller: "confirmation", confirmation_message_value: "Are you sure you want to delete all the words you've added? This action is permanent and cannot be undone.", action: "confirmation#confirm" } %>
+    <%= button_to(
+      "Delete all words",
+      destroy_all_words_path,
+      method: :delete,
+      class: "button-red",
+      data: {
+        controller: "confirmation disable",
+        action: "confirmation#confirm disable#disableButton",
+        confirmation_message_value: "⚠️ Are you sure you want to delete all #{@current_user.words.size} of the words you have added? This action is permanent and cannot be undone. ⚠️",
+        disable_with_value: "Deleting...",
+        disable_target: "button"
+      }
+    ) %>
   </div>
 </div>
