--- a/app/views/application/_flashes.html.erb
+++ b/app/views/application/_flashes.html.erb
@@ -6,7 +6,7 @@
         <button class="close-flash-button" data-action="click->flash#close">
           <%= heroicon "x" %>
         </button>
-        <p class="message"><%= flash[flash_type] %></p>
+        <p class="message"><%= sanitize(flash[flash_type]) %></p>
       </div>
       <% break %><%# this helps us match the previous behavior, showing only the highest priority flash if multiple are set %>
     <% end %>
