--- a/app/views/words/_filters.html.erb
+++ b/app/views/words/_filters.html.erb
@@ -18,7 +18,7 @@
     <%= link_to words_path(filter_params_plus(filter: "cards_not_created")), title: "Showing all words", class: "filter-off" do %>
       <%= heroicon "adjustments" %>
       <span class="filter-description">
-        No cards filter
+        Cards filter off
       </span>
     <% end %>
   <% end %>
