--- a/app/views/words/import.html.erb
+++ b/app/views/words/import.html.erb
@@ -12,6 +12,7 @@
     <li>[3]Source reference (i.e. Chapter 12)</li>
     <li>[4]Cards created (true/false)</li>
     <li>[5]Added to list on (date)</li>
+    <li>[6]Note</li>
   </ul>
 
   <%= form_tag(upload_words_path, method: :post, multipart: true, class: "import-csv-form") do %>
