--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -1,15 +1,17 @@
 <div class="words-list-page">
   <h1 class="page-title">
-    Words
+    <%= link_to "Words", words_path, class: "home-link" %>
     <%= link_to(word_list_instructions_path, title: "What does this feature do?") do %>
       <%= heroicon "information-circle", variant: :outline, options: { class: "info-icon" } %>
     <% end %>
   </h1>
 
   <div class="actions">
-    <%= link_to(new_word_path, class: "button-purple new-word") do %>
-      <%= heroicon "plus", options: { class: "create-button-icon" } %>
-      New word
+    <%= turbo_frame_tag "new-word-form" do %>
+      <%= link_to(new_word_path, class: "button-purple new-word") do %>
+        <%= heroicon "plus", options: { class: "create-button-icon" } %>
+        New word
+      <% end %>
     <% end %>
   </div>
 
