--- a/app/views/words/index.html.erb
+++ b/app/views/words/index.html.erb
@@ -7,12 +7,7 @@
   </h1>
 
   <div class="actions">
-    <%= turbo_frame_tag "new-word-form" do %>
-      <%= link_to(new_word_path, class: "button-purple new-word") do %>
-        <%= heroicon "plus", options: { class: "create-button-icon" } %>
-        New word
-      <% end %>
-    <% end %>
+    <%= render "new_word_button" %>
   </div>
 
   <%= render "filters" %>
