--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -39,44 +39,51 @@
   </div>
 
   <div class="square">
-    <% if @user.active_subscription.present? %>
-      <h3 class="title">Manage your subscription</h3>
-      <p>
-        A monthly subscription is required to unlock full access to the site after
-        your free trial. Your payment information is processed and stored by
-        <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank">Square</a>
-        and is not accessed by this site. You may cancel your subscription at any time.
-      </p>
-      <p>
-        <strong>Start date:</strong>
-        <%= @user.active_subscription.start_date.strftime("%m/%d/%Y") %>
-      </p>
-      <p>
-        <strong>Next charge date:</strong>
-        <%= @user.active_subscription.next_charge_date.strftime("%m/%d/%Y") %>
-      </p>
-      <a
-        class="square-button manage-subscription-button"
-        target="_blank"
-        href="<%= @user.active_subscription.self_management_link %>"
-      >
-        Manage subscription with Square
-      </a>
-    <% else %>
-      <h3 class="title">Subscribe</h3>
-      <p>
-        To unlock full access to the site after your free trial, you can subscribe
-        for $1.00 a month. Your payment information is processed and stored by
-        <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank">Square</a>
-        and is not accessed by this site. You may cancel your subscription at any time.
-      </p>
-      <a
-        class="square-button checkout-button"
-        href="https://square.link/u/oricGJt8?src=embed"
-      >
-        Subscribe with Square
-      </a>
-      <textarea class="checkout-button-html-hidden-textarea"></textarea>
+    <% should_cache = session[:revalidate_subscription_at] && Time.at(session[:revalidate_subscription_at].to_i).utc >= Time.now.utc %>
+    <% cache_if(should_cache, "subscription/#{@current_user.id}/#{session[:revalidate_subscription_at]}", skip_digest: true) do %>
+      <% if @user.active_subscription.present? %>
+        <h3 class="title">Manage your subscription</h3>
+        <p>
+          A monthly subscription is required to unlock full access to the site after
+          your free trial. Your payment information is processed and stored by
+          <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank" class="link-blue">Square</a>
+          and is not accessed by this site. You may cancel your subscription at any time.
+        </p>
+        <p>
+          <strong>Start date:</strong>
+          <%= @user.active_subscription.start_date.strftime("%m/%d/%Y") %>
+        </p>
+        <p>
+          <strong>Next charge date:</strong>
+          <%# only used when caching this fragment %>
+          <% session[:revalidate_subscription_at] = @user.active_subscription.next_charge_date.utc.to_i %>
+          <%= @user.active_subscription.next_charge_date.strftime("%m/%d/%Y") %>
+        </p>
+        <a
+          class="square-button manage-subscription-button"
+          target="_blank"
+          href="<%= @user.active_subscription.self_management_link %>"
+        >
+          Manage subscription with Square
+        </a>
+      <% else %>
+        <%# only used when caching this fragment %>
+        <% session[:revalidate_subscription_at] = nil %>
+        <h3 class="title">Subscribe</h3>
+        <p>
+          To unlock full access to the site after your free trial, you can subscribe
+          for $1.00 a month. Your payment information is processed and stored by
+          <a href="https://squareup.com/us/en/legal/general/buyer-features" target="_blank">Square</a>
+          and is not accessed by this site. You may cancel your subscription at any time.
+        </p>
+        <a
+          class="square-button checkout-button"
+          href="https://square.link/u/oricGJt8?src=embed"
+        >
+          Subscribe with Square
+        </a>
+        <textarea class="checkout-button-html-hidden-textarea"></textarea>
+      <% end %>
     <% end %>
   </div>
 </div>
