--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -2,14 +2,14 @@
   <h1 class="title">jpstudy 👋</h1>
 
   <p>
-    Welcome to jpstudy! The site is currently under construction and is considered to be in an alpha release only. If you want to be one of the first to get started creating word lists for your Japanese language study, feel free to <%= link_to("sign up", signup_path) %> and get started today. There are still several key features being added so expect to see the tool grow in the coming months, but we plan to support any migrations required so that no user generated content is lost.
+    Welcome to the alpha version of jpstudy! If you want to be one of the first Japanese language learners to get started with our new tools, feel free to <%= link_to("sign up", signup_path) %> today. There are still several features on the way, so you can expect to see the site grow and evolve in the coming months. <em>(We plan to support any migrations required so that no user-generated content is lost along the way!)</em>
   </p>
 
   <h3 class="title">What makes jpstudy special?</h3>
 
-  <h4 class="title">We like easy to use study tools</h4>
+  <h4 class="title">We like tools that are easy to use</h4>
   <p>
-    Our goal is to build simple tools that do not take much onboarding and serve as force-multipliers for language learners looking to maximize the efficiency of their study time. We understand that different tools are a better fit for different seasons of your language learning journey. We do not want to trap the content you create with our tools, so we will aim to provide content import and export functionality whenever possible.
+    Our goal is to build simple tools that do not take much onboarding and serve as force-multipliers for language learners looking to maximize the efficiency of their study time. We understand that different tools can be the best fit during different seasons of your language learning journey. In order to make sure we are not hindering anyones learning journey, we provide import and export functionality for all the content you generate on jpstudy.app.
   </p>
 
   <h4 class="title">We are just here to fill the gaps</h4>
