--- a/app/assets/stylesheets/jpstudy/component_styles.scss
+++ b/app/assets/stylesheets/jpstudy/component_styles.scss
@@ -88,10 +88,9 @@
   display: inline-block;
   width: 38px;
   height: 23px;
+  user-select: none;
   input {
     opacity: 0;
-    width: 0;
-    height: 0;
     &:checked + .slider {
       background-color: #3B82F6;
     }
@@ -101,7 +100,10 @@
       transform: translateX(15px);
     }
     &:focus + .slider {
-      box-shadow: 0 0 1px #3B82F6;
+      outline: -webkit-focus-ring-color auto 1px;
+      outline-color: -webkit-focus-ring-color;
+      outline-style: auto;
+      outline-width: 1px;
     }
   }
   .slider {
@@ -114,6 +116,7 @@
     background-color: #ccc;
     -webkit-transition: .4s;
     transition: .4s;
+    user-select: none;
     &:before {
       position: absolute;
       content: "";
