Move keyboard shortcuts into a controller

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,7 @@
   <body>
     <%= render "navigation" %>
     <main>
-      <section class="page-content">
+      <section class="page-content" data-controller="keyboard-shortcuts">
         <%= render "flashes" %>
         <%= yield %>
       </section>
