Add keyboard shortcut to close flashes with enter key

--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -18,7 +18,8 @@
     <li>shift + option + i <%= heroicon "arrow-narrow-right" %> word list import page</li>
     <br/>
     <li>BONUS:</li>
-    <li>escape <%= heroicon "arrow-narrow-right" %> close flash message or new word form</li>
+    <li>escape <%= heroicon "arrow-narrow-right" %> close flash message or the new word form</li>
+    <li>enter <%= heroicon "arrow-narrow-right" %> close flash message (alt)</li>
   </ul>
 
   <p class="contact">
