Shrink filter links to fit content

--- a/app/assets/stylesheets/jpstudy/words.scss
+++ b/app/assets/stylesheets/jpstudy/words.scss
@@ -72,6 +72,7 @@
       display: flex;
       align-items: center;
       float: left;
+      width: fit-content;
       &:not(:last-child) {
         margin-bottom: 2px;
       }
