Fix broken jpod word list search URL

--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -78,7 +78,7 @@
         <%# https://tatoeba.org/img/tatoeba.svg?1634498597 %>
         <%= image_tag "resource_icons/tatoeba.png", height: "20px" %>
       <% end %>
-      <%= link_to("https://www.japanesepod101.com/jpstudys/?search=#{word.japanese}&coreX=2000", target: "_blank", title: "Jpod101 sentence search") do %>
+      <%= link_to("https://www.japanesepod101.com/japanese-word-lists/?search=#{word.japanese}&coreX=2000", target: "_blank", title: "Jpod101 sentence search") do %>
         <%# https://d1pra95f92lrn3.cloudfront.net/media/thumb/23728_256square.jpg %>
         <%= image_tag "resource_icons/jpod101_2000.jpg", height: "20px" %>
       <% end %>
