Add instructions about resource links along with chrome extension info

--- a/app/views/static_pages/word_list_instructions.html.erb
+++ b/app/views/static_pages/word_list_instructions.html.erb
@@ -15,6 +15,16 @@
     If you already have a list of words you've been studying, you can use our <%= link_to "import tool", import_words_path %> to pick up right where you left off. Moving on from jpstudy? No worries, simply <%= link_to "export", export_words_path %> the word list you created on our site.
   </p>
 
+  <h3 class="title">How do I use the resource links?</h3>
+
+  <p>
+    You will notice after adding your first word that there are several resource link icons in the bottom left of each word card. These provide a quick way to locate things like definitions, audio clips, and example sentences. At this time resources are not user-configurable, but we're certainly open to suggestions if we are missing a tool that you like!
+  </p>
+
+  <p>
+    Some websites do not make it easy to execute programmatic searches, or to download audio clips for use in your study materials. To help resolve these shortcomings, you may wish to either build or install some pre-built Chrome extensions like <a href="https://github.com/jhunschejones/Chrome-According-To-Josh/tree/main/japanesepod101-better-search" target="_blank">japanesepod101-better-search</a>, <a href="https://github.com/jhunschejones/Chrome-According-To-Josh/tree/main/save-audio-japanesepod101" target="_blank">save-audio-japanesepod101</a>, <a href="https://github.com/jhunschejones/Chrome-According-To-Josh/tree/main/save-audio-forvo" target="_blank">save-audio-forvo</a> or <a href="https://github.com/jhunschejones/Chrome-According-To-Josh/tree/main/save-audio-japandict" target="_blank">save-audio-japandict</a>.
+  </p>
+
   <p class="contact">
     Questions about this feature? We'd love to hear your thoughts! You can reach us any time at <a href="mailto:support@jpstudy.app">support@jpstudy.app</a>.
   </p>
