--- a/app/assets/stylesheets/jpstudy/shared.scss
+++ b/app/assets/stylesheets/jpstudy/shared.scss
@@ -63,9 +63,87 @@ main {
   display: flex;
   width: 100%;
   justify-content: center;
+  min-height: 95vh;
   .page-content {
     padding: 12px 12px 24px 12px;
     width: 700px;
+  }
+}
+
+footer {
+  position: relative;
+  overflow: hidden;
+  background-color: #374151;
+  height: 50px;
+  @media (max-width: 600px) {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    height: fit-content;
+  }
+  span {
+    color: #9CA3AF;
+    font-size: 1em;
+    background-color: #374151;
+    padding: 6px 12px;
+  }
+  a, button {
+    float: left;
+    color: white;
+    text-align: center;
+    padding: 6px 12px;
+    text-decoration: none;
+    font-size: 1em;
+    background-color: #374151;
+    border: none;
+    height: 100%;
+    &:hover {
+      background-color: #1F2937;
+      cursor: pointer;
+    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    .icon-subtext {
+      font-size: 0.7em;
+    }
+  }
+  .left-links {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .center-links {
+    float: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 100%;
+    display: flex;
+    align-items: center;
+  }
+  .right-links {
+    float: right;
+    @media (max-width: 600px) {
+      display: none;
+    }
+  }
+  @media (max-width: 600px) {
+    .left-links,
+    .center-links {
+      position: relative;
+      height: 40px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      float: none;
+      transform: none;
+      top: 0;
+      left: 0;
+    }
   }
 }
 
