Add made with... line to about page <3

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -20,4 +20,10 @@
   <p class="contact">
     Questions? We'd love to hear your thoughts! You can reach us any time at <a href="mailto:support@jpstudy.app">support@jpstudy.app</a>.
   </p>
+
+  <br/>
+
+  <p class="light-gray">
+    Made with ❤️ and Ruby on Rails in Chicago, IL 🏙️ and Portland, OR 🌲
+  </p>
 </div>
