--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -10,10 +10,11 @@
   <ul class="code-block">
     <li>NAVIGATION:</li>
     <li>shift + option + w <%= heroicon "arrow-narrow-right" %> word list</li>
+    <li>shift + option + a <%= heroicon "arrow-narrow-right" %> word list (alt)</li>
     <li>shift + option + c <%= heroicon "arrow-narrow-right" %> word list + cards not created filter</li>
+    <li>shift + option + f <%= heroicon "arrow-narrow-right" %> word list + cards not created filter (alt)</li>
     <li>shift + option + s <%= heroicon "arrow-narrow-right" %> word search</li>
     <li>shift + option + n <%= heroicon "arrow-narrow-right" %> new word</li>
-    <li>shift + option + a <%= heroicon "arrow-narrow-right" %> new word (alt)</li>
     <li>shift + option + e <%= heroicon "arrow-narrow-right" %> word list export page</li>
     <li>shift + option + i <%= heroicon "arrow-narrow-right" %> word list import page</li>
     <br/>
