--- a/app/views/application/_navigation.html.erb
+++ b/app/views/application/_navigation.html.erb
@@ -13,7 +13,7 @@
       <small class="icon-subtext">Search</small>
     <% end %>
     <% if @current_user %>
-      <%= link_to(stats_user_path(@current_user)) do %>
+      <%= link_to(stats_user_path(@current_user), id: "stats-nav-link") do %>
         <%= heroicon "presentation-chart-bar" %>
         <small class="icon-subtext">Stats</small>
       <% end %>
