Update skeleton word to match new number of resources

--- a/app/views/words/_skeleton_word.html.erb
+++ b/app/views/words/_skeleton_word.html.erb
@@ -40,11 +40,8 @@
     </div>
 
   <div class="resources">
-    <span class="skeleton-resource-link">&nbsp;</span>
-    <span class="skeleton-resource-link"></span>
-    <span class="skeleton-resource-link"></span>
-    <span class="skeleton-resource-link"></span>
-    <span class="skeleton-resource-link"></span>
-    <span class="skeleton-resource-link"></span>
+    <% 9.times do %>
+      <span class="skeleton-resource-link"></span>
+    <% end %>
   </div>
 </div>
