Add order filter and update keyboard shortcuts

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -9,7 +9,11 @@
 
   <h4 class="title">We like tools that are easy to use</h4>
   <p>
-    Our goal is to build simple tools that do not take much onboarding and serve as force-multipliers for language learners looking to maximize the efficiency of their study time. We understand that different tools can be the best fit during different seasons of your language learning journey. In order to make sure we are not hindering anyones learning journey, we provide import and export functionality for all the content you generate on jpstudy.app.
+    Our goal is to build simple tools that do not take much onboarding and serve as force-multipliers for language learners looking to maximize the efficiency of their study time. We have started with a super-snappy <%= link_to "word list", words_path %> to help keep track of the words you are making flashcards for. Pro tip: zip around the site with <%= link_to "keyboard shortcuts", keyboard_shortcuts_path %> to make these tools even faster!
+  </p>
+
+  <p>
+    We understand that your tool selection might change during different seasons of your language learning journey. We know it's the worst getting locked into something when you are ready for a change, so we provide <%= link_to "import", import_words_path %> and <%= link_to "export", export_words_path %> functionality for all the content you create on jpstudy.app.
   </p>
 
   <h4 class="title">We are just here to fill the gaps</h4>
