--- a/app/views/static_pages/keyboard_shortcuts.html.erb
+++ b/app/views/static_pages/keyboard_shortcuts.html.erb
@@ -9,15 +9,15 @@
 
   <ul class="code-block">
     <li>NAVIGATION:</li>
-    <li>shift + option + w <%= heroicon "arrow-narrow-right" %> word list</li>
-    <li>shift + option + a <%= heroicon "arrow-narrow-right" %> word list (alt)</li>
-    <li>shift + option + c <%= heroicon "arrow-narrow-right" %> word list + cards not created filter</li>
-    <li>shift + option + f <%= heroicon "arrow-narrow-right" %> word list + cards not created filter (alt)</li>
-    <li>shift + option + n <%= heroicon "arrow-narrow-right" %> new word</li>
-    <li>shift + option + s <%= heroicon "arrow-narrow-right" %> word search</li>
-    <li>shift + option + u <%= heroicon "arrow-narrow-right" %> user stats</li>
-    <li>shift + option + e <%= heroicon "arrow-narrow-right" %> word list export page</li>
-    <li>shift + option + i <%= heroicon "arrow-narrow-right" %> word list import page</li>
+    <li>&#x21e7; + &#x2325; + w <%= heroicon "arrow-narrow-right" %> word list</li>
+    <li>&#x21e7; + &#x2325; + a <%= heroicon "arrow-narrow-right" %> word list (alt)</li>
+    <li>&#x21e7; + &#x2325; + c <%= heroicon "arrow-narrow-right" %> word list + filters</li>
+    <li>&#x21e7; + &#x2325; + f <%= heroicon "arrow-narrow-right" %> word list + filters (alt)</li>
+    <li>&#x21e7; + &#x2325; + n <%= heroicon "arrow-narrow-right" %> new word</li>
+    <li>&#x21e7; + &#x2325; + s <%= heroicon "arrow-narrow-right" %> word search</li>
+    <li>&#x21e7; + &#x2325; + u <%= heroicon "arrow-narrow-right" %> user stats</li>
+    <li>&#x21e7; + &#x2325; + e <%= heroicon "arrow-narrow-right" %> word list export page</li>
+    <li>&#x21e7; + &#x2325; + i <%= heroicon "arrow-narrow-right" %> word list import page</li>
     <br/>
     <li>BONUS:</li>
     <li>escape <%= heroicon "arrow-narrow-right" %> close flash message or the new word form</li>
