Remove filters when adding a new word from the words list page

--- a/app/views/words/_new_word_button.html.erb
+++ b/app/views/words/_new_word_button.html.erb
@@ -1,5 +1,5 @@
 <%= turbo_frame_tag "new-word-form" do %>
-  <%= link_to(new_word_path, class: "button-purple new-word") do %>
+  <%= link_to(new_word_path, class: "button-purple new-word", data: { controller: "new-word-button", action: "new-word-button#disableFilters" }) do %>
     <%= heroicon "plus", options: { class: "create-button-icon" } %>
     New word
   <% end %>
