--- a/app/views/words/_word.html.erb
+++ b/app/views/words/_word.html.erb
@@ -1,8 +1,13 @@
 <%= turbo_frame_tag dom_id(word) do %>
   <div
-    class="word"
+    class="word <%= dom_id(word) %>"
     data-controller="word"
+    data-word-word-id-value="<%= dom_id(word) %>"
     data-word-cards-created-value="<%= word.cards_created? %>"
+    data-word-is-new-word-value="<%= (defined?(is_new_word) && is_new_word) || false %>"
+    data-word-japanese-word-value="<%= word.japanese %>"
+    data-word-english-word-value="<%= word.english %>"
+    data-word-added-on-value="<%= word.added_to_list_on %>"
     data-word-target="wordCard"
   >
     <div class="delete">
